[gd_scene load_steps=5 format=3 uid="uid://dofdolhs5mvud"]

[ext_resource type="Script" path="res://scripts/UI_scripts/level_menu.gd" id="1_rg3gt"]
[ext_resource type="Texture2D" uid="uid://dtp14oamapi2f" path="res://assets/ui_backgrounds/dark background.jpg" id="2_5lgfn"]
[ext_resource type="FontFile" uid="uid://c6qqt7umpvcxx" path="res://assets/ui_backgrounds/fonts/MinimalPixel v2.ttf" id="3_j6ajn"]
[ext_resource type="Theme" uid="uid://do5rtu2b1ulmj" path="res://scenes/resources/ui/shortButton.tres" id="4_sigih"]

[node name="Level_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rg3gt")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5lgfn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_j6ajn")
theme_override_font_sizes/font_size = 64
text = "Level Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Level1_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(190, 80)
layout_mode = 2
theme = ExtResource("4_sigih")
theme_override_fonts/font = ExtResource("3_j6ajn")
theme_override_font_sizes/font_size = 24
text = "Level 1
"

[node name="Level2_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(190, 80)
layout_mode = 2
theme = ExtResource("4_sigih")
theme_override_fonts/font = ExtResource("3_j6ajn")
theme_override_font_sizes/font_size = 24
text = "Level 2
"

[node name="Level3_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(190, 80)
layout_mode = 2
theme = ExtResource("4_sigih")
theme_override_fonts/font = ExtResource("3_j6ajn")
theme_override_font_sizes/font_size = 24
text = "Level 3"

[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Level1_Button" to="." method="_on_level_1_button_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Level2_Button" to="." method="_on_level_2_button_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Level3_Button" to="." method="_on_level_3_button_mouse_entered"]
